# service-identity

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  azure-pipelines.yml  conftest.py  pyproject.toml  service_identity.py  setup.cfg  setup.py  test_service_identity.py  tox.ini
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  pypi-package.yml  zizmor.yml
constraints/: oldest-cryptography.txt  oldest-pyopenssl.txt
docs/: Makefile  api.rst  backward-compatibility.rst  changelog.rst  conf.py  implemented-standards.md  implemented-standards.rst  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  pyopenssl_example.py
service_identity/: __init__.py  _attrs.py  _common.py  _compat.py  exc.py  exceptions.py  pyopenssl.py  stdlib.py
src/service_identity/: __init__.py  _common.py  common.py  cryptography.py  exceptions.py  hazmat.py  pyopenssl.py
tests/: conftest.py  test_attrs.py  test_common.py  test_cryptography.py  test_hazmat.py  test_packaging.py  test_pyopenssl.py  test_stdlib.py  util.py
tests/constraints/: oldest-cryptography.txt  oldest-pyopenssl.txt
tests/typing/: api.py
